# CROCO-NH

./: .gitignore  README.rst  create_myconfig.bash
AGRIF/: Makefile  agrif2model.F90
AGRIF/AGRIF_FILES/: modarrays.F90  modbc.F90  modbcfunction.F90  modcluster.F90  modcurgridfunctions.F90  modgrids.F90  modinit.F90  modinitvars.F90  modinterp.F90  modinterpbasic.F90  modlinktomodel.F90  modmask.F90  modmpp.F90  modprocs.F90  modsauv.F90  modseq.F90  modtypes.F90  modupdate.F90  modupdatebasic.F90  modutil.F90  modvariables.F90
AGRIF/LIB/: DiversListe.c  Makefile  SubLoopCreation.c  UtilAgrif.c  UtilCharacter.c  UtilFile.c  UtilFortran.c  UtilListe.c  UtilNotGridDep.c  WorkWithAllocatelist.c  WorkWithParameterlist.c  WorkWithglobliste.c  WorkWithlistdatavariable.c  WorkWithlistmoduleinfile.c  WorkWithlistofcoupled.c  decl.h  (+10 more)
NHMG/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README_ada  README_autotools  README_caparmor  README_curie  README_datarmor  README_datarmor~  README_iuem  config.status  configure  configure.ac  configure.ac_13sept2017  libtool
NHMG/doc/: Makefile  Makefile.am  Makefile.in
NHMG/examples/matlab/: Makefile  Makefile.am  Makefile.in  addcoef.m  converge.m  dummy.m  makeD.m  makeDzl.m  makeM.m  makeMzl.m  makeP.m  makeT.m  makeTc.m  metrics_3D.m  richardson.m  testM3D.m  testM3Dzl.m  test_oper.m
NHMG/src/: Makefile  Makefile.am  Makefile.in  libnhmg.la  mg_autotune.f90  mg_autotune.f90~  mg_autotune.lo  mg_autotune.mod  mg_coupling.f90_old  mg_cst.f90  mg_cst.lo  mg_cst.mod  mg_diagnostics.f90  mg_diagnostics.lo  mg_diagnostics.mod  mg_gather.f90  mg_gather.lo  mg_gather.mod  mg_grids.f90  mg_grids.lo  mg_grids.mod  mg_horiz_grids.f90  mg_horiz_grids.lo  mg_horiz_grids.mod  mg_intergrids.f90  mg_intergrids.lo  mg_intergrids.mod  mg_mpi.f90  mg_mpi.lo  mg_mpi.mod  mg_mpi_exchange.f90  mg_mpi_exchange.lo  mg_mpi_exchange.mod  mg_namelist.f90  mg_namelist.lo  mg_namelist.mod  mg_netcdf_out.f90  mg_netcdf_out.lo  mg_netcdf_out.mod  mg_netcdf_out_false.f90  (+23 more)
NHMG/src/.libs/: libnhmg.la  libnhmg.lai  libnhmg.so.0.0.0
NHMG/tests/: Makefile  Makefile.am  Makefile.in  cuc_namelist  fh_namelist  mg_mpi_exchange_ijk.f90  mg_setup_tests.f90  mg_testcuc.f90  mg_testfillhalo.f90  mg_testfillhalo.f90~  mg_testrndtopo.f90  mg_testrndtopo.f90~  mg_testseamount.f90  mg_testseamount_rnd.f90  mg_testseamount_rnd.f90~  mg_zr_hz.f90  nhmg_namelist  nhmg_ncjoin.f90  nhmg_ncjoin.f90~  rt_namelist  ts_namelist
OCEAN/: AGRIF_FixedGrids.in  Agrif2Model.F  FCT.h  MPI_Setup.F  MPI_setup_nbq.F90  Make.depend  Makedefs  Makedefs.generic  Makedefs.generic.AGRIF  Makefile  MessPass2D.F  MessPass3D.F  README  ab_ratio.F  alfabeta.F  amr.in  amub2_tri.F90  ana_grid.F  ana_initial.F  ana_vmix.F  analytical.F  autotiling.F  autotiling.h  averages.h  bbl.F  bbl.h  bio_BioEBUS.F  bio_N2ChlPZD2.F  bio_NChlPZD.F  bio_diag.F  biology.F  boundary.h  buffer.h  bulk_flux.F  bvf_mix.F  check_kwds.F  check_switches2.F  checkdims.F  checkkwds.F  climat.h  (+300 more)
PISCES/: biology_pisces.F  biology_pisces.F90  namelist_pisces  namelist_pisces.1  ocean2pisces.F90  ocean2pisces.h90  p4zbio.F90  p4zche.F90  p4zflx.F90  p4zint.F90  p4zlim.F90  p4zlys.F90  p4zmeso.F90  p4zmicro.F90  p4zmort.F90  p4zopt.F90  p4zprod.F90  p4zrem.F90  p4zsed.F90  p4zsink.F90  par_pisces.F90  pisces_ini.F90  sms_pisces.F90  trc.F90  trcini_pisces.F90  trcsms_pisces.F90  trcwri_pisces.F90
Run/: AGRIF_FixedGrids.in  amr.in  cppdefs.h  cppdefs_Caldeira.h  cppdefs_bimin.h  cppdefs_caldeira.h  cppdefs_dev.h  cppdefs_dev_bimin.h  croco.in  croco.in.1  croco.in.Caldeira  croco.in.Caldeira_Pnh  croco.in.Grav_adj  croco.in.Seamount  croco.in.Tank  croco.in.Tankint  croco.in.bimin  croco.in.bimin.skel  croco_forecast.in  croco_hindcast.in  croco_inter.in  croco_stations.in  domain_def.xml  field_def.xml_full  floats.in  jobcomp  jobcomp_caparmor  jobcomp_caparmor_bimin_16x4  jobcomp_caparmor_bimin_8x8  jobcomp_caparmor_bimin_8x8_dbg  jobcomp_curie_bimin  jobcomp_curie_bimin_16x16  jobcomp_curie_caldeira  jobcomp_datarmor_caldeira_16x16  jobcomp_datarmor_caldeira_2x2  jobcomp_datarmor_generic  jobcomp_lops_iuem  jobcomp_lops_iuem_dbg  jobcomp_lops_iuem_new  jobcomp_lops_iuem_new_dbg  (+29 more)
XIOS/: README_XIOS  domain_def.xml  field_def.xml_full  init_xios.F  iodef.xml  send_xios_diags.F  xios_launch.file
(+252 files in other folders)
