########################################################################
##- Author@mail: Nicolas.Grima@univ-brest.fr
##- Date       : December 2016
########################################################################
SUBDIRS	       = .
docdir    = $(prefix)/doc
doc_DATA  = *.pdf
EXTRA_DIST     = $(doc_DATA)
